# fishing_log

./: README.md
Fishing_log/: CMakeLists.txt  main.cpp  test.cpp
Fishing_log/Fishing_log/: main.cpp
Fishing_log/Fishing_log/fish_list/: fishList.json
Fishing_log/Fishing_log/include/: CoarseFish.hpp  FishBase.hpp  Log.hpp
Fishing_log/fish_list/: fishList.cpp  fishList.json  fish_species_list.txt
Fishing_log/include/: CheckFish.hpp  CoarseFish.hpp  Fish.hpp  FishBase.hpp  FishTypeProvider.hpp  Log.hpp  LogManager.hpp  Predator.hpp  checkName.hpp  dataFormat.hpp
Fishing_log/logs/: your_log.json
Fishing_log/src/: main.cpp
dobra wersja/Fishing_log/fish_list/: fishList.cpp
dobra wersja/Fishing_log/include/: CheckFish.hpp  LogManager.hpp
dobra wersja/Fishing_log/logs/: test.json
